fix issue of text selection not showing up visually

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -29,8 +29,7 @@
     display: block;
   }
   body {
-    @apply flex min-h-screen flex-col bg-skin-fill font-mono text-skin-base 
-    selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
+    @apply flex min-h-screen flex-col bg-skin-fill font-mono text-skin-base;
   }
   section,
   footer {
